Update and rename index.php to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width">
-    <title>Tiến Tiny Profile</title>
+    <title>Mr lam</title>
     <meta property="og:type" content="website">
     <meta name="theme-color" content="#dee9f9">
     <meta content="Personal info - Mr Lam" property="og:title">
