--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@ body{
         <div class="row align-items-center flex-row-reverse">
           <div class="col-md-12 col-sm-12 text-center" style="display: flex; justify-content: center;">
             <div class="infos"> 
-              Copyright All Rights Reserved © 2024 - <a style="color: #705ec8;" href="https://mrlamgc.com">Roblox</a>
+              Copyright All Rights Reserved © 2024 - <a style="color: #705ec8;" href="https://mrlamgc.com">Lam, himself XD</a>
             </div>
           </div>
         </div>
