--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <div class="container">
             <div class="WTB_0571" style="border-color: rgb(255, 255, 255); box-shadow: 0 0 10px rgb(133, 81, 255);">
                 <span style="box-sizing: border-box; display: block; overflow: hidden; width: initial; height: initial; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; inset: 0px;">
-                    <img alt="" fallback="/Banner.svg" src="https://i.imgur.com/Jn5jNel.jpg" decoding="async" data-nimg="fill" style="position: absolute; inset: 0px; box-sizing: border-box; padding: 0px; border: none; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%; object-fit: cover;">
+                    <img alt="" fallback="/Banner.svg" src="https://i.imgur.com/k0erWSg.png" decoding="async" data-nimg="fill" style="position: absolute; inset: 0px; box-sizing: border-box; padding: 0px; border: none; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%; object-fit: cover;">
                     <noscript></noscript>
                 </span>
             </div>
@@ -495,8 +495,7 @@ body{
   "https://files.catbox.moe/ljkzkx.mp3", 
   "https://files.catbox.moe/whv98j.mp3",
   "https://files.catbox.moe/ckvwxr.mp3",
-  "https://files.catbox.moe/u0nljf.mp3",
-  "https://files.catbox.moe/v3pisc.mp3"
+  "https://files.catbox.moe/u0nljf.mp3"
 ];
 //Random music
 let index = Math.floor(Math.random() * ThanhDieu_List.length);
