--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ body{
                             <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="heart" class="svg-inline--fa fa-heart fa-w-16 mr-2" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" style="width: 1rem;">
                                 <path fill="currentColor" d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"></path>
                             </svg>9,0M </button>
-                        <button class="btn btn-outline fix-margin" onclick="window.open('https://zalo.me/0867456886');" style="border-color: rgb(222, 233, 249);">Contact</button>
+                        <button class="btn btn-outline fix-margin" onclick="window.open('https://discord.gg/Ns56gsQB');" style="border-color: rgb(222, 233, 249);">Contact</button>
                     </div>
                 </div>
             </div>
