--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width">
-    <title>Mr Lam Profile</title>
+    <title>Mr Lam Projects</title>
     <meta property="og:type" content="website">
     <meta name="theme-color" content="#dee9f9">
     <meta content="Mr Lam Website" property="og:title">
@@ -245,7 +245,7 @@ body{
                         <button id="like-button" class="btn btn-disabled" style="background-color: rgb(222, 233, 249);">
                             <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="heart" class="svg-inline--fa fa-heart fa-w-16 mr-2" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" style="width: 1rem;">
                                 <path fill="currentColor" d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"></path>
-                            </svg>6,9M </button>
+                            </svg>6,9M+ </button>
                         <button class="btn btn-outline fix-margin" onclick="window.open('https://discord.gg/Ns56gsQB');" style="border-color: rgb(222, 233, 249);">Contact</button>
                     </div>
                 </div>
@@ -301,7 +301,7 @@ body{
                             </svg>
                         </div>
                         <div class="__7qKt3cTj">
-                            <div class="M21RfAey">Friend</div>
+                            <div class="M21RfAey">Projects</div>
                             <div class="fHOTdnFx"><a href="https://dangviethaiuser.com" target="_self">Viet Hai</a></div>
                         </div>
                     </div>
@@ -351,30 +351,6 @@ body{
                             <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="share-alt" class="svg-inline--fa fa-share-alt fa-w-14 " role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                                 <path fill="currentColor" d="M352 320c-22.608 0-43.387 7.819-59.79 20.895l-102.486-64.054a96.551 96.551 0 0 0 0-41.683l102.486-64.054C308.613 184.181 329.392 192 352 192c53.019 0 96-42.981 96-96S405.019 0 352 0s-96 42.981-96 96c0 7.158.79 14.13 2.276 20.841L155.79 180.895C139.387 167.819 118.608 160 96 160c-53.019 0-96 42.981-96 96s42.981 96 96 96c22.608 0 43.387-7.819 59.79-20.895l102.486 64.054A96.301 96.301 0 0 0 256 416c0 53.019 42.981 96 96 96s96-42.981 96-96-42.981-96-96-96z"></path>
                             </svg>
-                            <div class="M21RfAey">Projects</div>
-                        </div>
-                        <div class="__7qKt3cTj">
-                            <div class="fHOTdnFx">
-                                <div class="row">
-                                    <div class="my-2 col-12 col-md-6 col-lg-4">
-                                        <div class="fw-bold card" style="background-color: rgb(238, 29, 82); color: rgb(255, 255, 255);">
-                                            <div class="m-2 d-flex flex-row">
-                                                <div class="d-flex flex-grow-1 flex-shrink-1 align-items-center overflow-hidden">
-                                                        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="share-alt" class="svg-inline--fa fa-share-alt fa-w-14 " role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-                                                        <path fill="currentColor" d="M448,209.91a210.06,210.06,0,0,1-122.77-39.25V349.38A162.55,162.55,0,1,1,185,188.31V278.2a74.62,74.62,0,1,0,52.23,71.18V0l88,0a121.18,121.18,0,0,0,1.86,22.17h0A122.18,122.18,0,0,0,381,102.39a121.43,121.43,0,0,0,67,20.14Z"></path>
-                                                    </svg> Show all projects
-                                                </div>
-                                                <div class="d-flex">
-                                                    <a target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="gOuahDzc btn btn-dark">
-                                                        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="external-link-alt" class="svg-inline--fa fa-external-link-alt fa-w-16 " role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-                                                            <path fill="currentColor" d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"></path>
-                                                        </svg>
-                                                    </a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-
                             <div class="M21RfAey">Socials</div>
                         </div>
                         <div class="__7qKt3cTj">
