--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@ body{
                         </div>
                         <div class="__7qKt3cTj">
                             <div class="M21RfAey">Projects</div>
-                            <div class="fHOTdnFx"><a href="https://dangviethaiuser.com" target="_self">Viet Hai</a></div>
+                            <div class="fHOTdnFx"><a href="https://projects.mrlamgc.com" target="_self">Click here</a></div>
                         </div>
                     </div>
                 </div>
