--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" style="overflow-y:scroll">
+<div style="cursor: url('https://i.imgur.com/i4UVb5Q.png')">
+</div>
 <link rel="icon" type="image/x-icon" href="https://i.imgur.com/NWskJj3.png">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
