--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" style="overflow-y:scroll">
-<div style="cursor: url('https://i.imgur.com/i4UVb5Q.png')">
+<div style="cursor: url('https://i.imgur.com/i4UVb5Q.png'), pointer">
 </div>
 <link rel="icon" type="image/x-icon" href="https://i.imgur.com/NWskJj3.png">
 <head>
