--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" style="overflow-y:scroll">
+<div class="alert fade alert-simple alert-info alert-dismissible text-left font__family-montserrat font__size-16 font__weight-light brk-library-rendered rendered show" role="alert" data-brk-library="component__alert">
+          <button type="button" class="close font__size-18" data-dismiss="alert">
+                  <span aria-hidden="true">
+                    <i class="fa fa-times blue-cross"></i>
+                  </span>
+                  <span class="sr-only">Close</span>
+                </button>
+          <i class="start-icon  fa fa-info-circle faa-shake animated"></i>
+          <strong class="font__weight-semibold">Notice</strong> From now on, the website domain is mrlamin.com, any older domains aint work in the future.
+        </div>
 
+      </div>
+
+      <div class="col-sm-12">
 <link rel="icon" type="image/x-icon" href="https://i.imgur.com/NWskJj3.png">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
