--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" style="overflow-y:scroll">
+<section>
+  <div class="square_box box_three"></div>
+  <div class="square_box box_four"></div>
+  <div class="container mt-5">
+    <div class="row">
+
+<div class="col-sm-12">
 <div class="alert fade alert-simple alert-info alert-dismissible text-left font__family-montserrat font__size-16 font__weight-light brk-library-rendered rendered show" role="alert" data-brk-library="component__alert">
           <button type="button" class="close font__size-18" data-dismiss="alert">
                   <span aria-hidden="true">
@@ -12,8 +19,7 @@
         </div>
 
       </div>
-
-      <div class="col-sm-12">
+</section>
 <link rel="icon" type="image/x-icon" href="https://i.imgur.com/NWskJj3.png">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
