--- a/index.html
+++ b/index.html
@@ -1,6 +1,29 @@
 <!DOCTYPE html>
 <html lang="en" style="overflow-y:scroll">
 <link rel="icon" type="image/x-icon" href="https://i.imgur.com/NWskJj3.png">
+<style>
+   .ui-widget-header {
+      background: lightgreen;
+      color: blue;
+      font-size: 20px;
+   }
+   #dialog {
+      text-align: center;
+   }
+</style>
+</head>
+<body>
+   <div id = "alertWindow" title = "Alert Box">
+   <p> The old domains won't be available! </p>
+   <p> Use this domain from now on to enter </p>
+   </div>
+   <script>
+      // open the imgInDialog div in the dialog box.
+      $(function () {
+         $("#alertWindow").dialog();
+      });
+   </script>
+</body>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width">
