--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" style="overflow-y:scroll">
 <link rel="icon" type="image/x-icon" href="https://i.imgur.com/NWskJj3.png">
+<!-- The notice board container -->
+<div class="notice-board">
+  <!-- The notice board content -->
+  <div class="notice-board-content">
+    <!-- The title of the notice board -->
+    <h2>Notice</h2>
+    <!-- The notice board message -->
+    <p>From now, the website will be online with this domain, any other domain wont work.</p>
+    <!-- The OK button -->
+    <button class="ok-button">Close</button>
+  </div>
+</div>
+
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width">
