--- a/index.html
+++ b/index.html
@@ -152,6 +152,10 @@
 </head>
 
 <body onkeydown="return false"> onLoad=";">
+<div class="w3-panel w3-yellow">
+  <h3>Warning!</h3>
+  <p>Yellow often indicates a warning that might need attention.</p>
+</div> 
     <div id="__next">
         <div style="display:contents">
             <div class="wrapper-nav">
