--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 		  <span onclick="this.parentElement.style.display='none'"
 		  class="w3-button w3-large w3-display-topright">&times;</span>
 		  <h3>Warning!</h3>
-		  <p>Yellow often indicates a warning that might need attention.</p>
+		  <p>From now on, the domain mrlamin.com will be used in the future, other domains wont work.</p>
 		</div>
 		</div> 
         <div style="display:contents">
