--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body class="w3-container">
+
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width">
@@ -158,8 +159,22 @@
 
     <div id="__next">
 	    <div class="w3-panel w3-yellow w3-display-container">
-		  <span onclick="this.parentElement.style.display='none'"
+		<style>
+
+		* {
+		
+		margin: 0;
+		
+		padding: 0;
+		
+		box-sizing: border-box;
+		
+		}
+		
+		</style>
+		  <span onclick="this.parentElement.style.display='none'" padding-bottom: 10px;
 		  class="w3-button w3-large w3-display-topright">&times;</span>
+		  
 		  <h3>Warning!</h3>
 		  <p>From now on, the domain mrlamin.com will be used in the future, other domains wont work.</p>
 		</div>
