--- a/index.html
+++ b/index.html
@@ -156,27 +156,14 @@
 </head>
 
 <body onkeydown="return false"> onLoad=";">
-
+    <div style="height: 70px;"></div>
     <div id="__next">
 	    <div class="w3-panel w3-yellow w3-display-container">
-		<style>
-
-		* {
-		
-		margin: 0;
-		
-		padding: 0;
-		
-		box-sizing: border-box;
-		
-		}
-		
-		</style>
-		  <span onclick="this.parentElement.style.display='none'" padding-bottom: 10px;
+		  <span onclick="this.parentElement.style.display='none'"; margin-top: 10px;
 		  class="w3-button w3-large w3-display-topright">&times;</span>
-		  
+		  <div style="height: 10px;"></div>
 		  <h3>Warning!</h3>
-		  <p>From now on, the domain mrlamin.com will be used in the future, other domains wont work.</p>
+		  <p>The project page is currently under maintance so please be patient and wait until it's fixed. I'm fixing it asap.</p>
 		</div>
 		</div> 
         <div style="display:contents">
@@ -542,3 +529,4 @@ audio.addEventListener("ended", function() {
   </div>
 </body>
 </html>
+
