--- a/index.html
+++ b/index.html
@@ -4,6 +4,30 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body class="w3-container">
+<head>
+<style>
+.logo {
+  position: fixed;
+  z-index: 9999;
+  top: 0;
+  left: 15px;
+  width: 250px;
+  height: 60px;
+  background-image: url("https://i.imgur.com/dyc0UZj_d.png");
+  background-size: cover;
+  cursor: pointer;
+}
+
+.logo:hover {
+  opacity: 0.8;
+}
+</style>
+</head>
+<body>
+<a href="https://mrlamin.com">
+  <div class="logo"></div>
+</a>
+</body>
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
