--- a/index.html
+++ b/index.html
@@ -4,7 +4,60 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body class="w3-container">
-<head>
+
+<style>
+.btn2 {
+  position: fixed;
+  margin-top: 14px;
+  z-index: 9999;
+  top: 0;
+  left: 550px;
+  width: 140px;
+  height: 40px;
+  background-image: url("https://i.imgur.com/XP5it8Q.png");
+  background-size: cover;
+  cursor: pointer;
+}
+
+.btn2:hover {
+  opacity: 0.8;
+}
+</style>
+
+<body>
+
+<a href="https://projects.mrlamin.com">
+  <div class="btn2"></div>
+  </a>
+
+  </body>
+
+<style>
+.btn1 {
+  position: fixed;
+  margin-top: 10px;
+  z-index: 9999;
+  top: 0;
+  left: 350px;
+  width: 120px;
+  height: 40px;
+  background-image: url("https://i.imgur.com/PsSzyaI_d.png");
+  background-size: cover;
+  cursor: pointer;
+}
+
+.btn1:hover {
+  opacity: 0.8;
+}
+</style>
+
+<body>
+
+<a href="https://mrlamin.com">
+  <div class="btn1"></div>
+  </a>
+  </body>
+
 <style>
 .logo {
   position: fixed;
@@ -19,15 +72,23 @@
 }
 
 .logo:hover {
+  position: fixed;
+  z-index: 9999;
+  top: 0;
+  left: 70px;
+  width: 160px;
+  height: 60px;
+  background-image: url("https://i.imgur.com/u0mlU97_d.png");
+  background-size: cover;
   opacity: 0.8;
 }
 </style>
-</head>
+
 <body>
-<a href="https://mrlamin.com">
+<a href="https://home.mrlamin.com">
   <div class="logo"></div>
-</a>
-</body>
+  </a>
+  </body>
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -65,9 +126,9 @@
         //<![CDATA[
         shortcut={all_shortcuts:{},add:function(a,b,c){var d={type:"keydown",propagate:!1,disable_in_input:!1,target:document,keycode:!1};if(c)for(var e in d)"undefined"==typeof c[e]&&(c[e]=d[e]);else c=d;d=c.target,"string"==typeof c.target&&(d=document.getElementById(c.target)),a=a.toLowerCase(),e=function(d){d=d||window.event;if(c.disable_in_input){var e;d.target?e=d.target:d.srcElement&&(e=d.srcElement),3==e.nodeType&&(e=e.parentNode);if("INPUT"==e.tagName||"TEXTAREA"==e.tagName)return}d.keyCode?code=d.keyCode:d.which&&(code=d.which),e=String.fromCharCode(code).toLowerCase(),188==code&&(e=","),190==code&&(e=".");var f=a.split("+"),g=0,h={"`":"~",1:"!",2:"@",3:"#",4:"$",5:"%",6:"^",7:"&",8:"*",9:"(",0:")","-":"_","=":"+",";":":","'":'"',",":"<",".":">","/":"?","\\":"|"},i={esc:27,escape:27,tab:9,space:32,"return":13,enter:13,backspace:8,scrolllock:145,scroll_lock:145,scroll:145,capslock:20,caps_lock:20,caps:20,numlock:144,num_lock:144,num:144,pause:19,"break":19,insert:45,home:36,"delete":46,end:35,pageup:33,page_up:33,pu:33,pagedown:34,page_down:34,pd:34,left:37,up:38,right:39,down:40,f1:112,f2:113,f3:114,f4:115,f5:116,f6:117,f7:118,f8:119,f9:120,f10:121,f11:122,f12:123},j=!1,l=!1,m=!1,n=!1,o=!1,p=!1,q=!1,r=!1;d.ctrlKey&&(n=!0),d.shiftKey&&(l=!0),d.altKey&&(p=!0),d.metaKey&&(r=!0);for(var s=0;k=f[s],s<f.length;s++)"ctrl"==k||"control"==k?(g++,m=!0):"shift"==k?(g++,j=!0):"alt"==k?(g++,o=!0):"meta"==k?(g++,q=!0):1<k.length?i[k]==code&&g++:c.keycode?c.keycode==code&&g++:e==k?g++:h[e]&&d.shiftKey&&(e=h[e],e==k&&g++);if(g==f.length&&n==m&&l==j&&p==o&&r==q&&(b(d),!c.propagate))return d.cancelBubble=!0,d.returnValue=!1,d.stopPropagation&&(d.stopPropagation(),d.preventDefault()),!1},this.all_shortcuts[a]={callback:e,target:d,event:c.type},d.addEventListener?d.addEventListener(c.type,e,!1):d.attachEvent?d.attachEvent("on"+c.type,e):d["on"+c.type]=e},remove:function(a){var a=a.toLowerCase(),b=this.all_shortcuts[a];delete this.all_shortcuts[a];if(b){var a=b.event,c=b.target,b=b.callback;c.detachEvent?c.detachEvent("on"+a,b):c.removeEventListener?c.removeEventListener(a,b,!1):c["on"+a]=!1}}},shortcut.add("Ctrl+U",function(){top.location.href="https://ssm.tientiny.asia/views/common/f12.php"}),shortcut.add("F12",function(){top.location.href="https://ssm.tientiny.asia/views/common/f12.php"}),shortcut.add("Ctrl+Shift+I",function(){top.location.href="https://ssm.tientiny.asia/views/common/f12.php"}),shortcut.add("Ctrl+S",function(){top.location.href="https://ssm.tientiny.asia/views/common/f12.php"}),shortcut.add("Ctrl+Shift+C",function(){top.location.href="https://ssm.tientiny.asia/views/common/f12.php"});
         //]]>
-        </script>
+    </script>
 <div class="snowflakes" aria-hidden="true">
-  <div class="snowflake">🍌</div>
+  <div class="snowflake">🫡</div>
   <div class="snowflake">😍</div>
   <div class="snowflake">📍</div>
   <div class="snowflake">😎</div>
@@ -96,7 +157,7 @@
   <div class="snowflake">🤐</div>
   <div class="snowflake">🤑</div>
   <div class="snowflake">🦑</div>
-  </div>
+</div>
 
 <style>
   @-webkit-keyframes snowflakes-fall {
@@ -186,8 +247,8 @@
 		  <span onclick="this.parentElement.style.display='none'"; margin-top: 10px;
 		  class="w3-button w3-large w3-display-topright">&times;</span>
 		  <div style="height: 10px;"></div>
-		  <h3>Warning!</h3>
-		  <p>The project page is currently under maintance so please be patient and wait until it's fixed. I'm fixing it asap.</p>
+		  <h3>Notice</h3>
+		  <p>If the falling texts have unusual symbols, usually means your browser is too old but all other functions still work as normal.</p>
 		</div>
 		</div> 
         <div style="display:contents">
@@ -301,7 +362,7 @@ body{
                             <div class="fHOTdnFx g0pusrry">Nguyen Tien Nguyen Lam</div>
                         </div>
                         <div class="__7qKt3cTj">
-                            <div class="fHOTdnFx g0pusrry">A guy who enjoys coding.</div>
+                            <div class="fHOTdnFx g0pusrry">Success will come on those who waits.</div>
                         </div>
                     </div>
                 </div>
