--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@ body{
                             <div class="fHOTdnFx g0pusrry">Nguyen Tien Nguyen Lam</div>
                         </div>
                         <div class="__7qKt3cTj">
-                            <div class="fHOTdnFx g0pusrry">Success will come on those who waits.</div>
+                            <div class="fHOTdnFx g0pusrry">You can't change the past, but you can change the future.</div>
                         </div>
                     </div>
                 </div>
