--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@ body{
         <div class="row align-items-center flex-row-reverse">
           <div class="col-md-12 col-sm-12 text-center" style="display: flex; justify-content: center;">
             <div class="infos"> 
-              Copyright All Rights Reserved © 2024 - <a style="color: #705ec8;" href="https://mrlam.us.yo">Lam, himself :)</a>
+              Copyright All Rights Reserved © 2024 - <a style="color: #705ec8;" href="https://mrlam.us.to">Lam, himself :)</a>
             </div>
           </div>
         </div>
