--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" style="overflow-y:scroll">
-<link rel="icon" type="image/x-icon" href="https://i.imgur.com/NWskJj3.png">
+<link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/ThanhPhamPhuong/wbsite-lam/main/favicon.ico">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body class="w3-container">
