--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@ body{
   <span id="closeButton">&times;</span>
   <div id="audioPlayer">
     <audio id="backgroundMusic" controls autoplay loop>
-      <source src="your-audio-stream-url" type="audio/mpeg">
+      <source src="https://stream.zeno.fm/aphjprpoohptv" type="audio/mpeg">
       Your browser does not support the audio element.
     </audio>
   </div>
@@ -651,7 +651,7 @@ body{
 
 <script>
 // Replace 'your-audio-stream-url' with the actual URL of your live audio stream
-document.getElementById('backgroundMusic').src = 'your-audio-stream-url';
+document.getElementById('backgroundMusic').src = 'https://stream.zeno.fm/aphjprpoohptv';
 
 // Add event listener to the close button
 document.getElementById('closeButton').addEventListener('click', function() {
