--- a/index.html
+++ b/index.html
@@ -586,7 +586,8 @@ body{
       </div>
     </footer>    
     <br>
-
+</body>
+</style>
 /* Modern audio player styles */
 #audioContainer {
   position: fixed;
