--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@ body{
     </footer>    
     <br>
 </body>
-</style>
+<style>
 /* Modern audio player styles */
 #audioContainer {
   position: fixed;
