--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@ body{
                         </div>
                         <div class="__7qKt3cTj">
                             <div class="M21RfAey">Job</div>
-                            <div class="fHOTdnFx">Admin shopgc24.shop</div>
+                            <div class="fHOTdnFx">Quality potatoes export center</div>
                         </div>
                     </div>
                 </div>
@@ -401,7 +401,7 @@ body{
                         </div>
                         <div class="__7qKt3cTj">
                             <div class="M21RfAey">Projects</div>
-                            <div class="fHOTdnFx"><a href="https://projects.mrlamin.com" target="_self">Click here</a></div>
+                            <div class="fHOTdnFx"><a href="https://projects.mrlam.us.to" target="_self">Click here</a></div>
                         </div>
                     </div>
                 </div>
