--- a/index.html
+++ b/index.html
@@ -586,82 +586,10 @@ body{
       </div>
     </footer>    
     <br>
-</body>
-<style>
-/* Modern audio player styles */
-#audioContainer {
-  position: fixed;
-  bottom: 0;
-  right: 0;
-  width: 50%;
-  max-width: 300px; /* Limiting the max width to ensure it doesn't take up too much space */
-  background-color: #f2f2f2;
-  border-radius: 10px 0 0 10px;
-  padding: 20px;
-  box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.1);
-  z-index: 9999; /* Ensures the audio controls appear above other content */
-}
-
-#audioPlayer {
-  width: 100%;
-}
-
-#audioPlayer audio {
-  width: 100%;
-  display: block;
-}
-
-#audioPlayer audio::-webkit-media-controls-panel {
-  background-color: transparent;
-  color: #333;
-}
-
-#audioPlayer audio::-webkit-media-controls-play-button {
-  background-color: #333;
-  color: #fff;
-}
-
-#audioPlayer audio::-webkit-media-controls-volume-slider {
-  background-color: #333;
-}
-
-#audioPlayer audio::-webkit-media-controls-current-time-display,
-#audioPlayer audio::-webkit-media-controls-time-remaining-display {
-  color: #333;
-}
-
-#closeButton {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  cursor: pointer;
-  color: #333;
-}
-</style>
-</head>
-<body>
-<div id="audioContainer">
-  <span id="closeButton">&times;</span>
-  <div id="audioPlayer">
-    <audio id="backgroundMusic" controls autoplay loop>
-      <source src="https://stream.zeno.fm/aphjprpoohptv" type="audio/mpeg">
-      Your browser does not support the audio element.
-    </audio>
-  </div>
-</div>
-
-<script>
-// Replace 'your-audio-stream-url' with the actual URL of your live audio stream
-document.getElementById('backgroundMusic').src = 'https://stream.zeno.fm/aphjprpoohptv';
-
-// Add event listener to the close button
-document.getElementById('closeButton').addEventListener('click', function() {
-  var audio = document.getElementById('backgroundMusic');
-  audio.pause(); // Pause the audio
-  document.getElementById('audioContainer').style.display = 'none'; // Hide the audio container
-});
-
-
+<audio id="backgroundMusic" autoplay loop>
+  <source src="your-audio-stream-url" type="audio/mpeg">
+  Audio failure... no music this time:(
+</audio>
 </div>
 </body>
 </html>
