--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@ body{
                         </div>
                         <div class="__7qKt3cTj">
                             <div class="M21RfAey">Job</div>
-                            <div class="fHOTdnFx">Quality potatoes export center</div>
+                            <div class="fHOTdnFx">Protecting ❤️</div>
                         </div>
                     </div>
                 </div>
