--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body>
 
-<a href="https://projects.mrlamin.com">
+<a href="https://projects.mrlam.us.to">
   <div class="btn2"></div>
   </a>
 
@@ -53,7 +53,7 @@
 
 <body>
 
-<a href="https://mrlamin.com">
+<a href="https://mrlam.us.to">
   <div class="btn1"></div>
   </a>
   </body>
@@ -89,6 +89,17 @@
   <div class="logo"></div>
   </a>
   </body>
+
+<script>
+    // Listen for keydown event
+    document.addEventListener('keydown', function(event) {
+        // Check if the pressed key is "n" (key code 78)
+        if (event.key === 'n') {
+            // Redirect to another page
+            window.location.href = 'https://mrlamin.com/index2'; // Replace with your desired URL
+        }
+    });
+</script>
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
