--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body>
 
-<a href="https://projects.mrlam.us.to">
+<a href="https://mrlam.us.to/projects">
   <div class="btn2"></div>
   </a>
 
@@ -412,7 +412,7 @@ body{
                         </div>
                         <div class="__7qKt3cTj">
                             <div class="M21RfAey">Projects</div>
-                            <div class="fHOTdnFx"><a href="https://projects.mrlam.us.to" target="_self">Click here</a></div>
+                            <div class="fHOTdnFx"><a href="https://mrlam.us.to/projects" target="_self">Click here</a></div>
                         </div>
                     </div>
                 </div>
