--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         // Check if the pressed key is "n" (key code 78)
         if (event.key === 'n') {
             // Redirect to another page
-            window.location.href = 'https://mrlamin.com/index2'; // Replace with your desired URL
+            window.location.href = 'https:/mrlam.us.to/secret'; // Replace with your desired URL
         }
     });
 </script>
