--- a/secret.html
+++ b/secret.html
@@ -226,15 +226,10 @@
 
     // Event listener for input
     searchBox.addEventListener('input', () => {
-        // Clear existing letters
-        letters.forEach(letter => letter.remove());
-        letters.length = 0;
-
         // Create new letters based on input content
         const inputContent = searchBox.value;
-        for (let i = 0; i < inputContent.length; i++) {
-            createCharacter(inputContent[i]);
-        }
+        const lastInputIndex = inputContent.length - 1;
+        createCharacter(inputContent[lastInputIndex]);
     });
 
     // Event listener for backspace key
