--- a/secret.html
+++ b/secret.html
@@ -148,6 +148,62 @@
   }
 </style>
 
+<script>
+    // Function to detect the device type
+    function detectDevice() {
+        var deviceType;
+        
+        // Check if the device is a desktop or laptop
+        if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
+            deviceType = "Mobile";
+        } else {
+            deviceType = "Desktop or Laptop";
+        }
+
+        // Display the detected device type
+        document.getElementById("deviceType").innerHTML = "Chào các chú nha:) Chú vào web bằng: " + deviceType + ".";
+    }
+
+    // Call the detectDevice function when the page loads
+    window.onload = detectDevice;
+</script>
+
+<div id="deviceType"></div>
+
+
+<script>
+    // Function to get client's IP address
+    function getClientIP(callback) {
+        // Using a third-party service to get the IP address
+        fetch('https://api.ipify.org?format=json')
+        .then(response => response.json())
+        .then(data => {
+            callback(data.ip);
+        })
+        .catch(error => {
+            console.error('Error fetching IP address:', error);
+            callback(null);
+        });
+    }
+
+    // Function to display the IP address
+    function displayIP(ip) {
+        if (ip) {
+            document.getElementById("clientIP").innerHTML = "Địa chỉ IP của chú đúng không:) -> " + ip;
+        } else {
+            document.getElementById("clientIP").innerHTML = "Không lấy đc ip :(";
+        }
+    }
+
+    // Call the getClientIP function when the page loads
+    window.onload = function() {
+        getClientIP(displayIP);
+    };
+</script>
+
+<div id="clientIP"></div>
+
+    
 <style>
     body {
         margin: 0;
