--- a/secret.html
+++ b/secret.html
@@ -170,7 +170,15 @@
 
 <div id="deviceType"></div>
 
+<body>
 
+<style>
+    /* CSS for black font color */
+    body {
+        color: black;
+    }
+</style>
+    
 <script>
     // Function to get client's IP address
     function getClientIP(callback) {
@@ -189,9 +197,9 @@
     // Function to display the IP address
     function displayIP(ip) {
         if (ip) {
-            document.getElementById("clientIP").innerHTML = "Địa chỉ IP của chú đúng không:) -> " + ip;
+            document.getElementById("clientIP").innerHTML = "Your IP address is: " + ip;
         } else {
-            document.getElementById("clientIP").innerHTML = "Không lấy đc ip :(";
+            document.getElementById("clientIP").innerHTML = "Unable to retrieve IP address.";
         }
     }
 
@@ -203,6 +211,7 @@
 
 <div id="clientIP"></div>
 
+</body>
     
 <style>
     body {
