--- a/projects/index.html
+++ b/projects/index.html
@@ -9,8 +9,11 @@
     <div class="frame">
       <div class="div">
         <button class="home-button">Home</button>
+          <button class="home-button" onclick="window.location.href='http://mrlam.us.to';">
         <div class="contact-button">Contact</div>
+            <div class="contact-button" onclick="window.location.href='http://mrlam.us.to/contact';">
         <div class="projects-button">Projects</div>
+              <div class="contact-button" onclick="window.location.href='http://mrlam.us.to/projects';">
         <div class="projects">
           <div class="overlap-group">
             <div class="text-wrapper">Projects</div>
