--- a/projects/index.html
+++ b/projects/index.html
@@ -10,13 +10,13 @@
       <div class="div">
         <button class="home-button">Home
           <button class="home-button" onclick="window.location.href='http://mrlam.us.to';">
-          </button>
+          </button></button>
         <div class="contact-button">Contact
           <div class="contact-button" onclick="window.location.href='http://mrlam.us.to/contact';">
-          </div>
+          </div></div>
         <div class="projects-button">Projects
           <div class="contact-button" onclick="window.location.href='http://mrlam.us.to/projects';">
-          </div>
+          </div></div>
         <div class="projects">
           <div class="overlap-group">
             <div class="text-wrapper">Projects</div>
