--- a/projects/index.html
+++ b/projects/index.html
@@ -9,14 +9,13 @@
     <div class="frame">
       <div class="div">
         <button class="home-button">Home
-          <button onclick="window.location.href='http://mrlam.us.to';">
-          </button></button>
-        <div class="contact-button">Contact
+          <div onclick="window.location.href='http://mrlam.us.to';">
+          </div></button>
+        <button class="contact-button">Contact
           <div onclick="window.location.href='http://mrlam.us.to/contact';">
-          </div></div>
+          </div></button>
         <div class="projects-button">Projects
-          <div onclick="window.location.href='http://mrlam.us.to/projects';">
-          </div></div>
+          </div>
         <div class="projects">
           <div class="overlap-group">
             <div class="text-wrapper">Projects</div>
