--- a/projects/index.html
+++ b/projects/index.html
@@ -8,12 +8,8 @@
   <body>
     <div class="frame">
       <div class="div">
-        <button class="home-button">Home
-          <div onclick="window.location.href='http://mrlam.us.to';">
-          </div></button>
-        <button class="contact-button">Contact
-          <div onclick="window.location.href='http://mrlam.us.to/contact';">
-          </div></button>
+        <a href="http://mrlam.us.to" class="home-button">Home</a>
+        <a href="http://mrlam.us.to/contact" class="clickable-text">Contact</a>
         <div class="projects-button">Projects
           </div>
         <div class="projects">
