--- a/projects/index.html
+++ b/projects/index.html
@@ -9,7 +9,7 @@
     <div class="frame">
       <div class="div">
         <a href="http://mrlam.us.to" class="home-button">Home</a>
-        <a href="http://mrlam.us.to/contact" class="clickable-text">Contact</a>
+        <a href="http://mrlam.us.to/contact" class="contact-button">Contact</a>
         <div class="projects-button">Projects
           </div>
         <div class="projects">
