--- a/projects/index.html
+++ b/projects/index.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <style>
+    .div-wrapper img:hover {
+            opacity: 0.7; /* Change opacity on hover */
+        }
+    </style>
     <div class="frame">
       <div class="div">
         <a href="http://mrlam.us.to" class="home-button">Home</a>
@@ -34,7 +39,7 @@
             </p>
             <button class="group-button">
               <div onclick="window.location.href='http://mrlam.us.to/projects/get-more-ram';">
-              <div class="div-wrapper"><div class="text-wrapper-6">Download</div></div>
+              <div class="div-wrapper"><div class="text-wrapper-6">Download</div><<img src="https://i.ibb.co/pj5xmqD/Screenshot-2024-08-10-at-8-03-27-PM.png">/div>
             </button>
           </div>
         </div>
