--- a/404.html
+++ b/404.html
@@ -14,12 +14,12 @@
           <div class="text-wrapper-2">Web-no-found</div>
           <div class="text-wrapper-3">?</div>
         </div>
-        <button class="home-button">Home</button>
-        <div class="contact-button">Contact</div>
-        <div class="projects-button">Projects</div>
+        <a href="http://mrlam.us.to" class="home-button">Home</a>
+        <a href="http://mrlam.us.to/contact" class="contact-button">Contact</a>
+        <a href="http://mrlam.us.to/projects" class="home-button">Projects</a>
         <div class="mrlam-button">&lt;mrlam/404&gt;</div>
         <div class="text-wrapper-4">Try going back to:</div>
-        <div class="text-wrapper-5">Home</div>
+        <a href="http://mrlam.us.to" class="text-wrapper-5">Home</a>
       </div>
     </div>
   </body>
