--- a/projects/index.html
+++ b/projects/index.html
@@ -8,7 +8,7 @@
   <body>
     <style>
     .group-button:hover {
-            opacity: 0.7; /* Change opacity on hover */
+            opacity: 0.7;
         }
     </style>
     <div class="frame">
