--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@
         </div>
         <a href="http://mrlam.us.to" class="home-button">Home</a>
         <a href="http://mrlam.us.to/contact" class="contact-button">Contact</a>
-        <a href="http://mrlam.us.to/projects" class="home-button">Projects</a>
+        <a href="http://mrlam.us.to/projects" class="projects-button">Projects</a>
         <div class="mrlam-button">&lt;mrlam/404&gt;</div>
         <div class="text-wrapper-4">Try going back to:</div>
         <a href="http://mrlam.us.to" class="text-wrapper-5">Home</a>
