--- a/projects/get-more-ram/index.html
+++ b/projects/get-more-ram/index.html
@@ -40,15 +40,15 @@
           <div class="text-wrapper-5">Description</div>
           <img class="button" src="img/button.png" />
           <div class="text-wrapper-6">v0.5</div>
-          <div class="button-2">
+          <div onclick="window.location.href='http://mrlam.us.to/projects/get-more-ram/downloads';" class="button-2">
             <img class="microsoft-windows" src="img/microsoft-windows-22-logo-black-and-white-1.png" />
             <div class="text-wrapper-7">Windows</div>
           </div>
         </div>
         <div class="mrlam-button">&lt;mrlam/projects/get-more-ram&gt;</div>
-        <button class="home-button">Home</button>
-        <div class="contact-button">Contact</div>
-        <div class="projects-button">Projects</div>
+        <button onclick="window.location.href='http://mrlam.us.to';" class="home-button">Home</button>
+        <div onclick="window.location.href='http://mrlam.us.to/contacts';" class="contact-button">Contact</div>
+        <div onclick="window.location.href='http://mrlam.us.to/projects';" class="projects-button">Projects</div>
         <div class="text-wrapper-8">Related projects:</div>
         <div class="overlap">
           <img class="polygon" src="img/polygon-1.svg" />
